bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
while (test) {order=getIndication()
                    ^BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="R") right()
                      ^BDR:5: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="L") left()
                      ^BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="A") forward()
                      ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="Z") backward()
                      ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="I") {right(); right(); forward()}
                      ^BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="B") {forward(); forward()}
                      ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="C") {forward(); forward(); forward()}
                      ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="Y") {backward(); backward()}
                      ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order="Z") {backward(); backward(); backward()}
                      ^