bdr.BDR.scala.code
var order:String="A"
var test:Boolean=true
while (test) {order=getIndication()
             if (order="R") right()
             if (order="L") left()
             if (order="A") forward()
             if (order="Z") backward()
             if (order="I") {right(); right(); forward()}
             if (order="B") {forward(); forward()}
             if (order="C") {forward(); forward(); forward()}
             if (order="Y") {backward(); backward()}
             if (order="Z") {backward(); backward(); backward()}
						 else test=false}  